--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "@angular/platform-browser": "^5.0.0",
     "@angular/platform-browser-dynamic": "^5.0.0",
     "@angular/router": "^5.0.0",
-    "@ng-bootstrap/ng-bootstrap": "^3.2.2",
+    "@ng-bootstrap/ng-bootstrap": "^1.0.0",
+    "angular-calendar": "^0.23.6",
     "animate.css": "^3.5.2",
     "bootstrap": "4.0.0-beta",
     "bootstrap-datepicker": "^1.7.1",
@@ -33,6 +34,7 @@
     "datatables.net-buttons-bs4": "^1.5.1",
     "datatables.net-fixedheader-bs4": "^3.1.3",
     "datatables.net-responsive-bs4": "^2.2.1",
+    "date-fns": "^1.29.0",
     "font-awesome": "^4.7.0",
     "fullcalendar": "^3.8.0",
     "jquery": "^3.2.1",
@@ -46,6 +48,7 @@
     "moment": "^2.20.1",
     "morris.js": "^0.5.0",
     "ng-click-outside": "^4.0.0",
+    "ngx-color-picker": "^6.7.0",
     "ngx-perfect-scrollbar": "^6.3.1",
     "popper.js": "^1.12.9",
     "raphael": "^2.2.7",
