trying calender implementation

--- a/package.json
+++ b/package.json
@@ -22,13 +22,14 @@
     "@angular/platform-browser-dynamic": "^5.0.0",
     "@angular/router": "^5.0.0",
     "@ng-bootstrap/ng-bootstrap": "^1.0.0",
+    "@swimlane/ngx-datatable": "^13.1.0",
     "angular-calendar": "^0.23.6",
     "animate.css": "^3.5.2",
     "bootstrap": "4.0.0-beta",
     "bootstrap-datepicker": "^1.7.1",
     "bootstrap-markdown": "^2.10.0",
     "cd-themify-icons": "0.0.1",
-    "chart.js": "^2.7.1",
+    "chart.js": "^2.7.2",
     "core-js": "^2.4.1",
     "datatables.net-bs4": "^1.10.16",
     "datatables.net-buttons-bs4": "^1.5.1",
@@ -74,7 +75,7 @@
     "karma-coverage-istanbul-reporter": "^1.2.1",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~5.1.2",
+    "protractor": "^5.4.1",
     "ts-node": "~3.2.0",
     "tslint": "~5.7.0",
     "typescript": "~2.4.2"
