--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "ngx-cookie-service": "^1.0.10",
     "ngx-perfect-scrollbar": "^6.3.1",
     "popper.js": "^1.12.9",
+    "pretty-checkbox": "^3.0.3",
     "raphael": "^2.2.7",
     "rxjs": "^5.5.2",
     "select2": "^4.0.6-rc.1",
