--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-app",
+  "name": "school-management-system",
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
@@ -52,6 +52,7 @@
     "ngx-color-picker": "^6.7.0",
     "ngx-cookie-service": "^1.0.10",
     "ngx-perfect-scrollbar": "^6.3.1",
+    "node-sass": "^4.9.3",
     "popper.js": "^1.12.9",
     "pretty-checkbox": "^3.0.3",
     "raphael": "^2.2.7",
