--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "^5.0.0",
     "@ng-bootstrap/ng-bootstrap": "^1.0.0",
     "@swimlane/ngx-datatable": "^13.1.0",
+    "amcharts3": "^3.21.13",
     "angular-calendar": "^0.23.6",
     "animate.css": "^3.5.2",
     "bootstrap": "4.0.0-beta",
