roll filter done

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "^5.0.0",
     "@angular/router": "^5.0.0",
     "@ng-bootstrap/ng-bootstrap": "^1.0.0",
+    "@ng-select/ng-select": "^2.10.2",
     "@swimlane/ngx-datatable": "^13.1.0",
     "amcharts3": "^3.21.13",
     "angular-calendar": "^0.23.6",
@@ -50,6 +51,7 @@
     "moment": "^2.20.1",
     "morris.js": "^0.5.0",
     "ng-click-outside": "^4.0.0",
+    "ng-select": "^1.0.0",
     "ngx-color-picker": "^6.7.0",
     "ngx-cookie-service": "^1.0.10",
     "ngx-perfect-scrollbar": "^6.3.1",
@@ -58,6 +60,7 @@
     "pretty-checkbox": "^3.0.3",
     "raphael": "^2.2.7",
     "rxjs": "^5.5.2",
+    "rxjs-compat": "^6.3.3",
     "select2": "^4.0.6-rc.1",
     "summernote": "^0.8.8",
     "toastr": "^2.1.4",
