--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@ng-bootstrap/ng-bootstrap": "^1.0.0",
     "@ng-select/ng-select": "^2.10.2",
     "@swimlane/ngx-datatable": "^13.1.0",
+    "@toverux/ngx-sweetalert2": "^4.0.0",
     "amcharts3": "^3.21.13",
     "angular-calendar": "^0.23.6",
     "animate.css": "^3.5.2",
@@ -52,6 +53,7 @@
     "morris.js": "^0.5.0",
     "ng-click-outside": "^4.0.0",
     "ng-select": "^1.0.0",
+    "ng2-toasty": "^4.0.3",
     "ngx-color-picker": "^6.7.0",
     "ngx-cookie-service": "^1.0.10",
     "ngx-perfect-scrollbar": "^6.3.1",
@@ -63,6 +65,7 @@
     "rxjs-compat": "^6.3.3",
     "select2": "^4.0.6-rc.1",
     "summernote": "^0.8.8",
+    "sweetalert2": "^7.28.4",
     "toastr": "^2.1.4",
     "zone.js": "^0.8.14"
   },
