--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^5.0.0",
+    "@angular/cdk": "^5.0.0-rc.0",
     "@angular/common": "^5.0.0",
     "@angular/compiler": "^5.0.0",
     "@angular/core": "^5.0.0",
     "@angular/forms": "^5.0.0",
     "@angular/http": "^5.0.0",
+    "@angular/material": "^5.0.0-rc.0",
     "@angular/platform-browser": "^5.0.0",
     "@angular/platform-browser-dynamic": "^5.0.0",
     "@angular/router": "^5.0.0",
@@ -41,6 +43,7 @@
     "date-fns": "^1.29.0",
     "font-awesome": "^4.7.0",
     "fullcalendar": "^3.8.0",
+    "hammerjs": "^2.0.8",
     "jquery": "^3.2.1",
     "jquery-minicolors": "^2.1.10",
     "jquery-slimscroll": "^1.3.8",
