--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "school-management-system",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "license": "MIT",
   "scripts": {
     "ng": "ng",
@@ -12,20 +12,28 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^5.0.0",
-    "@angular/cdk": "^5.0.0-rc.0",
-    "@angular/common": "^5.0.0",
-    "@angular/compiler": "^5.0.0",
-    "@angular/core": "^5.0.0",
-    "@angular/forms": "^5.0.0",
-    "@angular/http": "^5.0.0",
-    "@angular/material": "^5.0.0-rc.0",
-    "@angular/platform-browser": "^5.0.0",
-    "@angular/platform-browser-dynamic": "^5.0.0",
-    "@angular/router": "^5.0.0",
+    "@agm/core": "^1.0.0-beta.2",
+    "@angular/animations": "^5.2.9",
+    "@angular/cdk": "^5.2.4",
+    "@angular/common": "^5.2.9",
+    "@angular/compiler": "^5.2.9",
+    "@angular/core": "^5.2.9",
+    "@angular/forms": "^5.2.9",
+    "@angular/http": "^5.2.9",
+    "@angular/material": "^5.2.4",
+    "@angular/platform-browser": "^5.2.9",
+    "@angular/platform-browser-dynamic": "^5.2.9",
+    "@angular/platform-server": "5.2.9",
+    "@angular/router": "^5.2.9",
     "@ng-bootstrap/ng-bootstrap": "^1.0.0",
+    "angular-bootstrap-md": "^5.2.0",
     "@ng-select/ng-select": "^1.6.2",
     "@swimlane/ngx-datatable": "^13.1.0",
+    "angular2-datatable": "^0.6.0",
+    "angular2-lightbox": "^1.3.0",
+    "angular2-notifications": "^0.7.4",
+    "angular2-text-mask": "^8.0.4",
+    "ng2-file-upload": "^1.3.0",
     "@toverux/ngx-sweetalert2": "^4.0.0",
     "amcharts3": "^3.21.13",
     "angular-calendar": "^0.23.6",
@@ -66,16 +74,18 @@
     "raphael": "^2.2.7",
     "rxjs": "^5.5.2",
     "rxjs-compat": "^6.3.3",
+    "screenfull": "^3.3.3",
     "select2": "^4.0.6-rc.1",
     "summernote": "^0.8.8",
     "sweetalert2": "^7.28.4",
     "toastr": "^2.1.4",
+    "web-animations-js": "^2.3.1",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
     "@angular/cli": "1.6.2",
-    "@angular/compiler-cli": "^5.0.0",
-    "@angular/language-service": "^5.0.0",
+    "@angular/compiler-cli": "^5.2.9",
+    "@angular/language-service": "^5.2.9",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
