--- a/package.json
+++ b/package.json
@@ -26,17 +26,18 @@
     "@angular/platform-server": "5.2.9",
     "@angular/router": "^5.2.9",
     "@ng-bootstrap/ng-bootstrap": "^1.0.0",
-    "angular-bootstrap-md": "^5.2.0",
     "@ng-select/ng-select": "^1.6.2",
     "@swimlane/ngx-datatable": "^13.1.0",
+    "@toverux/ngx-sweetalert2": "^4.0.0",
+    "amcharts3": "^3.21.13",
+    "angular-bootstrap-md": "^5.2.0",
+    "angular-calendar": "^0.23.6",
+    "angular-draggable-droppable": "^2.0.0",
+    "angular-resizable-element": "^3.2.2",
     "angular2-datatable": "^0.6.0",
     "angular2-lightbox": "^1.3.0",
     "angular2-notifications": "^0.7.4",
     "angular2-text-mask": "^8.0.4",
-    "ng2-file-upload": "^1.3.0",
-    "@toverux/ngx-sweetalert2": "^4.0.0",
-    "amcharts3": "^3.21.13",
-    "angular-calendar": "^0.23.6",
     "animate.css": "^3.5.2",
     "bootstrap": "4.0.0-beta",
     "bootstrap-datepicker": "^1.7.1",
@@ -64,6 +65,7 @@
     "morris.js": "^0.5.0",
     "ng-click-outside": "^4.0.0",
     "ng-select": "^1.0.0",
+    "ng2-file-upload": "^1.3.0",
     "ng2-toasty": "^4.0.3",
     "ngx-color-picker": "^6.7.0",
     "ngx-cookie-service": "^1.0.10",
