--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "angular2-notifications": "^0.7.4",
     "angular2-text-mask": "^8.0.4",
     "animate.css": "^3.5.2",
+    "blueimp-canvas-to-blob": "^3.14.0",
     "bootstrap": "4.0.0-beta",
     "bootstrap-datepicker": "^1.7.1",
     "bootstrap-markdown": "^2.10.0",
@@ -66,6 +67,7 @@
     "ng-click-outside": "^4.0.0",
     "ng-select": "^1.0.0",
     "ng2-file-upload": "^1.3.0",
+    "ng2-img-max": "^2.1.18",
     "ng2-toasty": "^4.0.3",
     "ngx-color-picker": "^6.7.0",
     "ngx-cookie-service": "^1.0.10",
@@ -85,7 +87,6 @@
     "web-animations-js": "^2.3.1",
     "zone.js": "^0.8.14"
   },
-  
   "devDependencies": {
     "@angular/cli": "1.6.2",
     "@angular/compiler-cli": "^5.2.9",
