--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "datatables.net-fixedheader-bs4": "^3.1.3",
     "datatables.net-responsive-bs4": "^2.2.1",
     "date-fns": "^1.29.0",
+    "file-saver": "^2.0.0",
     "font-awesome": "^4.7.0",
     "fullcalendar": "^3.8.0",
     "hammerjs": "^2.0.8",
@@ -84,6 +85,7 @@
     "sweetalert2": "^7.28.4",
     "toastr": "^2.1.4",
     "web-animations-js": "^2.3.1",
+    "xlsx": "^0.14.1",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
